zigbee: updated ZCLCluster.readAttributes() implementation and test case.