@@ -16,21 +16,21 @@
 
 package org.osgi.impl.service.zigbee.basedriver;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
-import java.util.Set;
 import org.osgi.service.zigbee.ZCLAttribute;
 import org.osgi.service.zigbee.ZCLAttributeInfo;
 import org.osgi.service.zigbee.ZCLCluster;
 import org.osgi.service.zigbee.ZCLException;
 import org.osgi.service.zigbee.ZCLFrame;
+import org.osgi.service.zigbee.ZCLReadStatusRecord;
 import org.osgi.service.zigbee.descriptions.ZCLClusterDescription;
 import org.osgi.util.promise.Promise;
 import org.osgi.util.promise.Promises;
 
 /**
- * Mocked impl.
+ * Mock implementation of the ZCLCluster interface.
  * 
  * @author $Id$
  */
@@ -73,53 +73,66 @@ public class ZCLClusterImpl implements ZCLCluster {
 	}
 
 	public Promise readAttributes(ZCLAttributeInfo[] attributesInfoArray) {
-		// Map<Integer, byte[]> response = new HashMap<Integer, byte[]>();
-		// FIX Should we check for a null value?
-		/*
-		 * if (attributes == null ) { handler.onFailure(new
-		 * NullPointerException("attributes cannot be null")); }
-		 */
-
 		if (attributesInfoArray == null) {
 			return Promises.failed(new NullPointerException("attributes cannot be null"));
 		} else if (attributesInfoArray.length == 0) {
 			return Promises.failed(new IllegalArgumentException("attributes array cannot be empty"));
 		}
-		Map response = new HashMap();
 
-		Set code = new HashSet();
+		Map readStatusMap = new HashMap();
+
+		ZCLReadStatusRecord[] readStatusRecords = new ZCLReadStatusRecord[attributesInfoArray.length];
+
+		int manufacturerCode = attributesInfoArray[0].getManufacturerCode();
 
 		for (int i = 0; i < attributesInfoArray.length; i++) {
 			ZCLAttributeInfo attributeInfo = attributesInfoArray[i];
-			code.add(new Integer(attributeInfo.getManufacturerCode()));
-			if (code.size() != 1) {
+			if (manufacturerCode != attributeInfo.getManufacturerCode()) {
 				return Promises.failed(new IllegalArgumentException(
 						attributeInfo.getId() + " has a different manufacturer code compared to the others"));
 			}
+
 			int attrId = attributeInfo.getId();
+
 			ZCLAttribute attribute = getAttributeFromId(attrId);
 			if (attribute == null) {
-				return Promises.failed(new ZCLException(ZCLException.UNSUPPORTED_ATTRIBUTE,
-						ZCLException.FAILURE,
-						"the AttributeId is not valid"));
-			}
-			if (attributeInfo.getDataType() != null && attribute.getDataType() != null) {
-
+				ZCLException failure = new ZCLException(ZCLException.UNSUPPORTED_ATTRIBUTE, "unknown attributeId");
+				ZCLReadStatusRecordImpl readStatusRecord = new ZCLReadStatusRecordImpl(attributeInfo, failure);
+				readStatusRecords[i] = readStatusRecord;
+				readStatusMap.put(new Integer(attrId), readStatusRecord);
+				continue;
+			} else if (attributeInfo.getDataType() != null && attribute.getDataType() != null) {
 				if (attributeInfo.getDataType().getId() != attribute.getDataType().getId()) {
-					return Promises.failed(new ZCLException(ZCLException.UNSUPPORTED_ATTRIBUTE,
-							ZCLException.FAILURE,
-							"the Attribute datatype is not valid"));
+					ZCLException failure = new ZCLException(ZCLException.INVALID_DATA_TYPE, "requested attribute data type does not match returned one");
+					ZCLReadStatusRecordImpl readStatusRecord = new ZCLReadStatusRecordImpl(attributeInfo, failure);
+					readStatusRecords[i] = readStatusRecord;
+					readStatusMap.put(new Integer(attribute.getId()), readStatusRecord);
+					continue;
 				}
 			}
-		}
 
-		int i = 0;
-		// for (int i : attributesIds) {
-		ZCLAttributeInfo attribute = attributesInfoArray[i];
-		byte[] attributeValue = {0};
-		response.put(Integer.valueOf(Integer.toString(attribute.getId())), attributeValue);
-		// }
-		return Promises.resolved(response);
+			Object value;
+			try {
+				value = attribute.getValue().getValue();
+			} catch (InvocationTargetException e) {
+				ZCLException failure = new ZCLException(ZCLException.SOFTWARE_FAILURE, "got InvocationTargetException: " + e.getMessage());
+				ZCLReadStatusRecordImpl readStatusRecord = new ZCLReadStatusRecordImpl(attributeInfo, failure);
+				readStatusRecords[i] = readStatusRecord;
+				readStatusMap.put(new Integer(attribute.getId()), readStatusRecord);
+				continue;
+			} catch (InterruptedException e) {
+				ZCLException failure = new ZCLException(ZCLException.SOFTWARE_FAILURE, "got InterruptedException: " + e.getMessage());
+				ZCLReadStatusRecordImpl readStatusRecord = new ZCLReadStatusRecordImpl(attributeInfo, failure);
+				readStatusRecords[i] = readStatusRecord;
+				readStatusMap.put(new Integer(attribute.getId()), readStatusRecord);
+				continue;
+			}
+
+			ZCLReadStatusRecordImpl readStatusRecord = new ZCLReadStatusRecordImpl(attributeInfo, null, value);
+			readStatusRecords[i] = readStatusRecord;
+			readStatusMap.put(new Integer(attribute.getId()), readStatusRecord);
+		}
+		return Promises.resolved(readStatusMap);
 	}
 
 	public Promise writeAttributes(boolean undivided, Map attributesIdsAndValues) {
@@ -180,9 +193,9 @@ public class ZCLClusterImpl implements ZCLCluster {
 	private ZCLAttribute getAttributeFromId(int attrId) {
 		if (attributes != null) {
 			for (int i = 0; i < attributes.length; i++) {
-				ZCLAttribute attr = attributes[i];
-				if (attr != null && attr.getId() == attrId) {
-					return attr;
+				ZCLAttribute attribute = attributes[i];
+				if (attribute != null && attribute.getId() == attrId) {
+					return attribute;
 				}
 			}
 		}
